[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "core-utils"
version = "0.1.0"
description = "Generic utilities for Python projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "isort>=5.12",
    "pytest>=7.0",
]

[tool.pdm]
distribution = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
ignore = [
    "E501",
    "E203",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
